using custom themes

--- a/output/first-test-article.html
+++ b/output/first-test-article.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>Joe Moon Whitehead</title>
+ <title>First test article</title>
  <!-- Latest compiled and minified Bootstrap CSS -->
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
 </head>
@@ -9,10 +9,9 @@
  <div class="container">
 <div class="row">
  <div class="col-md-8">
-  <h1>Joe Moon Whitehead</h1>
-   <h2><a href="/first-test-article.html">First test article</a></h2>
-   <label>Posted on <strong>2023-07-31 10:30:00+01:00</strong></label>
-   <p>This is the content of my super blog post. It tests my site works!</p>
+  <h1>First test article</h1>
+  <label>Posted on <strong>2023-07-31 10:30:00+01:00</strong></label>
+  <p>This is the content of my super blog post. It tests my site works!</p>
  </div>
 </div>
  </div> 
