--- a/output/pages/projects.html
+++ b/output/pages/projects.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>Joe Moon Whitehead - Archives</title>
+ <title>Joe Moon Whitehead - Projects</title>
  <!-- Latest compiled and minified Bootstrap CSS -->
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
 </head>
 <body>
  <div class="container">
-<h1>Archives for Joe Moon Whitehead</h1>
+    <h1>Projects</h1>
+    
 
-<dl>
-    <dt>Mon 31 July 2023</dt>
-    <dd><a href="www.joemoonwhitehead.com/first-test-article.html">First test article</a></dd>
-</dl>
+    <p><a href="www.joemoonwhitehead.com/first-test-article.html">A link to my first article!</a></p>
+<p><a href="www.joemoonwhitehead.com/images/ben-entry.jpeg">A link to Ben's entry visa! Yippee!!</a></p>
+
  </div> 
 </body>
 </html>
