saving before destroying

--- a/output/archives.html
+++ b/output/archives.html
@@ -11,7 +11,7 @@
 
 <dl>
     <dt>Mon 31 July 2023</dt>
-    <dd><a href="www.joemoonwhitehead.com/first-test-article.html">First test article</a></dd>
+    <dd><a href="www.joemoonwhitehead.com/articles/first-test-article.html">First test article</a></dd>
 </dl>
  </div> 
 </body>
