--- a/output/pages/projects.html
+++ b/output/pages/projects.html
@@ -10,7 +10,7 @@
     <h1>Projects</h1>
     
 
-    <p><a href="www.joemoonwhitehead.com/first-test-article.html">A link to my first article!</a></p>
+    <p><a href="www.joemoonwhitehead.com/articles/first-test-article.html">A link to my first article!</a></p>
 <p><a href="www.joemoonwhitehead.com/images/ben-entry.jpeg">A link to Ben's entry visa! Yippee!!</a></p>
 
  </div> 
